RESOLVED FIXED108924
INPUT_MULTIPLE_FIELDS_UI: element.focus() should not focus on disabled sub-fields.
https://bugs.webkit.org/show_bug.cgi?id=108924
Summary INPUT_MULTIPLE_FIELDS_UI: element.focus() should not focus on disabled sub-fi...
Kent Tamura
Reported 2013-02-05 01:57:38 PST
INPUT_MULTIPLE_FIELDS_UI: element.focus() should not focus on disabled sub-fields.
Attachments
Patch (6.74 KB, patch)
2013-02-05 02:01 PST, Kent Tamura
no flags
Patch for landing (6.97 KB, patch)
2013-02-05 05:08 PST, Kent Tamura
no flags
Kent Tamura
Comment 1 2013-02-05 02:01:20 PST
Kentaro Hara
Comment 2 2013-02-05 04:02:45 PST
Comment on attachment 186577 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=186577&action=review > LayoutTests/fast/forms/date-multiple-fields/date-multiple-fields-focus.html:15 > +dateInput.max = '2013-02-28'; How about changing this to dateInput.max = '2013-03-31', and test that the first focus() focuses on the month field and the second focus() focuses on the day field?
Kent Tamura
Comment 3 2013-02-05 05:04:30 PST
Comment on attachment 186577 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=186577&action=review >> LayoutTests/fast/forms/date-multiple-fields/date-multiple-fields-focus.html:15 >> +dateInput.max = '2013-02-28'; > > How about changing this to dateInput.max = '2013-03-31', and test that the first focus() focuses on the month field and the second focus() focuses on the day field? The second focus won't have different result. However it might be good to confirm non-different result in the test.
Kent Tamura
Comment 4 2013-02-05 05:08:45 PST
Created attachment 186605 [details] Patch for landing test change
Kentaro Hara
Comment 5 2013-02-05 05:09:29 PST
(In reply to comment #3) > The second focus won't have different result. However it might be good to confirm non-different result in the test. Makes sense to me. Thanks.
WebKit Review Bot
Comment 6 2013-02-05 05:55:51 PST
Comment on attachment 186605 [details] Patch for landing Clearing flags on attachment: 186605 Committed r141889: <http://trac.webkit.org/changeset/141889>
WebKit Review Bot
Comment 7 2013-02-05 05:55:55 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.