INPUT_MULTIPLE_FIELDS_UI: element.focus() should not focus on disabled sub-fields. https://bugs.webkit.org/show_bug.cgi?id=108924

Reviewed by Kentaro Hara.

Source/WebCore:

The first field may be non-focusable. We should search sub-fields for
focusable one.

Test: fast/forms/date-multiple-fields/date-multiple-fields-focus.html

* html/shadow/DateTimeEditElement.cpp:
(WebCore::DateTimeEditElement::focusOnNextFocusableField):
Added. A private helper function.
(WebCore::DateTimeEditElement::focusIfNoFocus): Use focusOnNextFocusableField.
(WebCore::DateTimeEditElement::focusByOwner): Ditto.
(WebCore::DateTimeEditElement::focusOnNextField): Ditto.
* html/shadow/DateTimeEditElement.h:
(DateTimeEditElement): Declare focusOnNextFocusableField.

LayoutTests:

* fast/forms/date-multiple-fields/date-multiple-fields-focus-expected.txt: Added.
* fast/forms/date-multiple-fields/date-multiple-fields-focus.html: Added.


Canonical link: https://commits.webkit.org/127148@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141889 268f45cc-cd09-0410-ab3c-d52691b4dbfc